--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -443,12 +443,11 @@ form.aui .typename {
 }
 
 .issue-header {
-    margin-left: auto;
     width: 75%;
     min-height: 48px;
     padding: 12px 12px 20px;
     position: relative;
-    margin-right: auto;
+    margin-left: 10px;
     /*width: 100%;*/
 }
 
