--- a/src/main/webapp/css/global-blue.css
+++ b/src/main/webapp/css/global-blue.css
@@ -142,7 +142,7 @@ ul,nav{
 
 /*--header--*/
 #header nav[role=customer-navigation] li{
-	width: 48%;
+	width: 98%;
 	float: left;
 	margin-right: 3.8%;
 	/* Now remove that right margin on every 2nd li */
@@ -307,7 +307,8 @@ ul,nav{
 }
 
 .wrapper{
-	max-width: 65.998em;
+	/*max-width: 65.998em;*/
+	max-width: 98%;
 	margin: 0 auto;
 	overflow: hidden;
 	zoom: 1;
