--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -470,3 +470,106 @@ form.aui .typename {
     padding: 0;
     font-size: 25px;
 }
+
+.button-menu {
+    border-top: 1px solid #96d1f8;
+    background: #658ed6;
+    background: -webkit-gradient(linear, left top, left bottom, from(#5bc1f0), to(#658ed6));
+    background: -webkit-linear-gradient(top, #5bc1f0, #658ed6);
+    background: -moz-linear-gradient(top, #5bc1f0, #658ed6);
+    background: -ms-linear-gradient(top, #5bc1f0, #658ed6);
+    background: -o-linear-gradient(top, #5bc1f0, #658ed6);
+    padding: 5px 10px;
+    -webkit-border-radius: 14px;
+    -moz-border-radius: 14px;
+    border-radius: 14px;
+    -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+    -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+    box-shadow: rgba(0,0,0,1) 0 1px 0;
+    text-shadow: rgba(0,0,0,.4) 0 1px 0;
+    color: white;
+    font-size: 11px;
+    font-family: Cabin,sans-serif;
+    text-decoration: none;
+    vertical-align: middle;
+    min-width: 80px;
+}
+.button-menu:hover {
+    border-top-color: #28597a;
+    background: #28597a;
+    color: #ccc;
+}
+.button-menu:active {
+    border-top-color: #1b435e;
+    background: #1b435e;
+}
+
+.ops-cont {
+    -moz-border-bottom-colors: none;
+    -moz-border-image: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background-color: #FFFFFF;
+    border-color: #BBBBBB;
+    border-radius: 5px 5px 0 0;
+    border-style: solid;
+    border-width: 1px 1px 0;
+    margin: 0;
+    padding: 16px;
+    margin-left: 12px;
+    margin-right: 12px;
+}
+
+.module:after {
+    clear: both;
+    content: "";
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
+.module:first-child {
+    margin-top: 0;
+}
+
+.module {
+    -moz-box-sizing: border-box;
+    margin: 16px 0 0;
+    padding: 0;
+    position: relative;
+    width: 100%;
+}
+
+.module > .mod-content:after {
+    clear: both;
+    content: "";
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
+.module > .mod-header + .mod-content {
+    padding: 8px 8px 8px 16px;
+}
+
+.module > .mod-header, .module > .mod-content, .module > .mod-footer {
+    display: block;
+    position: relative;
+}
+
+.content-body {
+    -moz-border-bottom-colors: none;
+    -moz-border-image: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    border-color: #BBBBBB;
+    border-radius: 0 0 5px 5px;
+    border-style: solid;
+    border-width: 0 1px 1px;
+    margin-top: 0;
+    padding-top: 0;
+    margin-left: 12px;
+    margin-right: 12px;
+}
