--- a/src/main/webapp/css/flexible-grids.css
+++ b/src/main/webapp/css/flexible-grids.css
@@ -22,9 +22,9 @@
 @import url(../yaml/navigation/hlist.css);
 @import url(../yaml/forms/gray-theme.css);
 
-@import url(../yaml/screen/typography.css);
+/*@import url(../yaml/screen/typography.css);*/
 @import url(../yaml/screen/screen-FULLPAGE-layout.css);
 
 /* import print layout | Druck-Layout einbinden */
 @import url(../yaml/print/print.css);
-@import url(../css/layout.css);
+/*@import url(../css/layout.css);*/
