--- a/src/main/webapp/yaml/forms/gray-theme.css
+++ b/src/main/webapp/yaml/forms/gray-theme.css
@@ -260,8 +260,8 @@
 		box-shadow: 0 0 1px 1px rgba(255,255,255,.8) inset, 0 1px 0 rgba(0,0,0,.15);
 		color: #333 !important;
 		cursor: pointer;
-		font: normal 1em/2em Arial, Helvetica;
-		margin: 1.5em 0.75em 0 0;
+		/*font: normal 1em/2em Arial, Helvetica;*/
+		/*margin: 1.5em 0.75em 0 0;*/
 		padding: 0 1.5em;
 		overflow: visible; /* removes extra side spacing in IE */
 		text-decoration: none !important;
