--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -602,3 +602,8 @@ form.aui .typename {
 .w_content_2 {
     padding-top: 20px;
 }*/
+
+.comments_body {
+    background-color: #e0ffff;
+    margin-top: 5px;
+}
